--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3222,9 +3222,9 @@
 
 		}
 
-	#three {
+	/* #three {
 		padding: 0em 0 0em 0;
-	}
+	} */
 
 		#three .inner {
 			display: -ms-flexbox;
@@ -4103,7 +4103,18 @@ h2,h3,h4,h5 {
 	border-radius: 4px;
 	padding: 50px;
 	color: white;
+	position: absolute;
 }
 
 
+/* Carousel */
+.carousel-item {
+	max-width: 100%; 
+	max-height: 100vh;
+}
+.carousel-inner {
+	min-height: 600px;
+}
+ 
+ 
 		
