--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4100,10 +4100,10 @@ h2,h3,h4,h5 {
 
 #contactUs {
 	background-color: #202020;
-	border-radius: 4px;
-	padding: 50px;
-	color: white;
-	position: absolute;
+	border-radius: 4px;  
+	padding: 20px;
+	color: white; 
+	display: block;
 }
 
 
