--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3991,9 +3991,13 @@ h2,h3,h4,h5 {
 	padding: 20px;
 	color: white; 
 	display: block;
+} 
+.GoogleForm {
+	font-family: var(--main-font);
+	background-color: var(--primary-color);
+	border-radius: 4px;
+	padding: 10px;
 }
-
-
  
  
  
